Update orux onlinemapsources

--- a/orux/qgis_to_orux.ipynb
+++ b/orux/qgis_to_orux.ipynb
@@ -136,11 +136,19 @@
     "with open(output_file, \"w\") as f:\n",
     "    f.write(TEMPLATE_FILE.format(entries=\"\\n\\n\".join(entries)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2de6808c-4083-49d5-be5f-cb038435205a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
